<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="4dp"
    android:background="#000000"
    tools:context="chriszhang.myandroid.com.complexcalculator.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#5C6BC0"
        android:text="test"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="2dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:text="test"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/display">
        <Button
            android:text="@string/phasor"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:text="@string/rectangular"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/real_part"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/imag_part"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/row_1">
        <Button
            android:text="@string/add"
            android:textSize="24sp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/subtract"
            android:textSize="24sp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/multiply"
            android:textSize="24sp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/divide"
            android:textSize="24sp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/row_2">
        <Button
            android:text="@string/one"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/two"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/three"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/zero"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/row_3">
        <Button
            android:text="@string/four"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/five"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/six"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/imaginary"
            android:fontFamily="serif"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="100"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_5"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@+id/row_4">
        <Button
            android:text="@string/seven"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1" />
        <Button
            android:text="@string/eight"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/nine"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/equals"
            android:textSize="20sp"
            android:background="#5C6BC0"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="100"/>
    </LinearLayout>

</RelativeLayout>
